--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     }
   },
   "dependencies": {
-    "vue": "^3.0.0"
+    "@ant-design/icons-vue": "^5.1.8",
+    "ant-design-vue": "2.0.0-rc.5",
+    "vue": "^3.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
@@ -53,20 +55,20 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/minimist": "^1.2.1",
     "@types/wait-on": "^5.2.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.0.4",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
     "electron": "9.1.0",
     "electron-builder": "^22.8.0",
-    "electron-is-dev": "^1.2.0",
     "electron-store": "^6.0.0",
+    "less": "^4.0.0",
     "minimist": "^1.2.5",
     "ora": "^5.0.0",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-esbuild": "^2.4.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4",
+    "vite": "^1.0.0-rc.13",
     "wait-on": "^5.2.0"
   },
   "keywords": [
